FIX: last article too close to footer

--- a/main/static/main/css/aqhj.css
+++ b/main/static/main/css/aqhj.css
@@ -724,4 +724,7 @@ a:hover {
     #news h4 {
         margin-bottom: 20px;
     }
+    #news {
+        margin-bottom: 35px;
+    }
 }
